Updates styling on search bar to avoid layout wrapping at certain viewport width.

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -16,4 +16,11 @@
   .govuk-header__logo img {
     vertical-align: bottom;
   }
+
+  .app-site-search {
+    @media (max-width: 62.25em) {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+  }
 }
